--- a/admin/admin.html
+++ b/admin/admin.html
@@ -19,10 +19,23 @@
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="../css/main.min.css">
-
+    <style>
+        #spinner {
+          height: 100vh;
+          width: 100vw;
+          background: #e5e5e5;
+          position: fixed;
+          left: 0;
+          top: 0;
+          z-index: 10;
+          display: none;
+          /* coolors */
+        }
+      </style>
     <title>CyberPhone - Admin</title>
 </head>
 <body>
+    <div id="spinner"></div>
     <header class="admin_header">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
@@ -70,6 +83,10 @@
                     <i class="fa fa-plus-circle"></i>
                     Add Phone
                 </button>
+                <button type="button" class="btn btn-primary" onclick="sortProductsAscending()">
+                    <i class="fa fa-plus-circle"></i>
+                    Sort Ascending
+                </button>
             </div>
 
             <div class="phone_table">
@@ -87,7 +104,7 @@
                             </th>
                         </tr>
                     </thead>
-                    <tbody></tbody>
+                    <tbody id="tblDanhSachSP"></tbody>
                 </table>
             </div>
         </div>
@@ -107,7 +124,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fa fa-mobile-alt"></i></span>
                                 </div>
-                                <input type="text" name="name" id="name" class="form-control input-sm" placeholder="Phone Name">
+                                <input type="text" name="name" id="name" class="form-control input-sm" placeholder="Phone Name" >
                             </div>
                     
                             <span class="sp-thongbao" id="tbTKNV"></span>
@@ -195,7 +212,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Add Phone</button>
+                    <button type="button" onclick="createProduct()" class="btn btn-warning" data-bs-dismiss="modal">Add Phone</button>
                     <button type="button" class="btn btn-dark" aria-label="Close" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -272,8 +289,22 @@
         
         </div>
     </footer>
-
+    <!-- axios -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
+      integrity="sha512-emSwuKiMyYedRwflbZB2ghzX8Cw8fmNVgZ6yQNNXXagFzFOaQmbvQ1vmDkddHjm5AITcBIZfC7k4ShQSjgPAmQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <!-- Bootstrap JS v5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- sort -->
+    <script src="../JS/sort.js"></script>
+    <!-- validate -->
+    <script src="../JS/validate.js"></script>
+    <!-- mycontroller -->
+    <script src="../JS/controller.js"></script>
+    <!-- my JS -->
+    <script src="../JS/main.js"></script>
 </body>
 </html>
