--- a/admin/admin.html
+++ b/admin/admin.html
@@ -87,6 +87,10 @@
                     <i class="fa fa-plus-circle"></i>
                     Sort Ascending
                 </button>
+                <button type="button" class="btn btn-primary" onclick="sortProductsDescending()">
+                    <i class="fa fa-plus-circle"></i>
+                    Sort Descending
+                </button>
             </div>
 
             <div class="phone_table">
@@ -193,7 +197,7 @@
                         </div>
 
                         <div class="form-group">
-                            <div class="input-group">
+                            ~<div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fa fa-signature"></i></span>
                                 </div>
@@ -298,8 +302,6 @@
     ></script>
     <!-- Bootstrap JS v5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- sort -->
-    <script src="../JS/sort.js"></script>
     <!-- validate -->
     <script src="../JS/validate.js"></script>
     <!-- mycontroller -->
