--- a/admin/admin.html
+++ b/admin/admin.html
@@ -216,7 +216,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" onclick="createProduct()" class="btn btn-warning" data-bs-dismiss="modal">Add Phone</button>
+                    <button type="button" onclick="createProduct()" onclick="validate()" class="btn btn-warning" data-bs-dismiss="modal">Add Phone</button>
                     <button type="button" class="btn btn-dark" aria-label="Close" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -302,10 +302,8 @@
     ></script>
     <!-- Bootstrap JS v5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- validate -->
-    <script src="../JS/validate.js"></script>
     <!-- mycontroller -->
-    <script src="../JS/controller.js"></script>
+    <script src="./adminJS/controller.js"></script>
     <!-- my JS -->
     <script src="../JS/main.js"></script>
 </body>
