moved html files to view

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <div class="homepage">
         <div class="container">
-            <a href="./admin/admin.html">
+            <a href="./admin/view/admin.html">
                 <div class="admin item">
                     <div class="item_pic">
                         <img src="./assets/img/admin2.png" alt="...">
@@ -33,7 +33,7 @@
                     <h1>Admin Page</h1>
                 </div>
             </a>
-            <a href="./customer/customer.html">
+            <a href="./customer/view/customer.html">
                 <div class="store item">
                     <div class="item_pic">
                         <img src="./assets/img/store.png" alt="...">
